--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     container_name: application
     build: 
       context: .
+      dockerfile: ./docker/application.Dockerfile
       args:
         POETRY_PYPI_TOKEN_PYPI: ${POETRY_PYPI_TOKEN_PYPI} 
     volumes:
