--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,17 @@ services:
     networks:
       - metabase_network
 
+  documentation_server:
+    container_name: nginx
+    restart: always
+    image: nginx:1.23.1-alpine
+    ports:
+      - "8003:80"
+    volumes:
+      - ./html:/usr/share/nginx/html
+    depends_on:
+      - documentation
+
 networks:
   metabase_network:
     driver: bridge
